[tool.poetry]
name = "my-currency"
version = "0.1.0"
description = ""
authors = ["Oleksandr Lopatin <lopatin.alexander.y@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
django = "^5.2"
djangorestframework = "^3.16.0"
markdown = "^3.7"
django-filter = "^25.1"
psycopg = "^3.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
